frontend/src/styles/index.css
:root {
  --primary-blue: #16549C;
  --primary-dark-blue: #073066;
  --secondary-cicm-blue: #0055d9;
  --secondary-vermilion: #e02f1f;
  --secondary-green: #01882a;
  --secondary-cyan: #0c9b92;
  --fg-gray: #334247;
  --bg-offwhite: #f0ece3;
  --accent-gold: #febe31;

  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}
.bold {
  font-weight: bold;
}
.blue {
  color: var(--secondary-cicm-blue);
}
body, html, div#root, div.home {
  margin: 0px;
  padding: 0px;
  height: 100%;
  min-height: 130vh;
  background-color: gainsboro;

  /* Diagonals */
  background-size: 7px 7px;
  background-image: repeating-linear-gradient(-45deg, lightgray 0, hsl(from gainsboro h s 80) 1px, gainsboro 0, gainsboro 50%);
}
.sign-in img.paper-trail-logo {
  width: 150px;
  height: auto;
}
.sign-in {
  display: flex;
  justify-content: center;
  align-items: center;

  background-image: url('/images/geometric-blue-bg.png');
  background-position: center;
  background-size: cover;

  width: 100vw;
  height: 100vh;
}
.sign-in h1 {
  color: var(--primary-dark-blue);
  margin: 0px;
}
.sign-in button {
  width: 75%;
  font-weight: bold;
}
.sign-in .slu-logo {
  width: 50px;
  height: auto;
}
.sign-in-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 15px;

  width: 450px;
  height: 570px;

  background-color: var(--bg-offwhite);
  border: var(--accent-gold) solid 3px;
  border-radius: 21px;
}
button, input[type="submit"], input[type="reset"] {
  /* Remove default styling of buttons */
	background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
	outline: inherit;
}
button {
  box-sizing: border-box;
  padding: 13px 34px;
  border-radius: 15px;
}
.btn-icon {
  height: 1rem;
}
button.outline {
  background-color: rgba(0,0,0,0);
  color: var(--primary-blue);
  border: var(--primary-blue) 2px solid;
}
button.oauth {
  background-color: var(--primary-blue);
  color: white; 
  border: var(--primary-dark-blue) solid 1px;
}
button.with-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 7px;
}
.circular {
  border-radius: 50%;
}
.sign-in .or-divider {
  width: 70%;
  display: flex;  
  align-items: center;
  gap: 7px;
  color: gray;
}
.line {
  flex: 1;
  height: 1px;
  background-color: gray;
}

div.home {
  display: flex;
}
.sidebar {
  display: flex;
  flex-direction: column;
  gap: 20px;

  height: 100%;
  width: 360px;
  box-sizing: border-box;
  overflow: scroll;

  background-color: var(--primary-dark-blue);
}
.sidebar-btn {
  align-self: flex-end;
  width: fit-content;
  height: 40px;
  padding: 0px;
  margin: 10px 15px;
}
.sidebar-btn > img {
  width: 40px;
}
.sidebar img.paper-trail-logo {
  width: 170px;
  height: auto;
  align-self: center;
}
.sidebar ul {
  padding: 0px;
}
.sidebar li {
  list-style: none;
}
.sidebar a {
  color: white;
  text-decoration: none; 
  display: block;
  width: 100%;
  padding: 10px 30px;  
  box-sizing: border-box;
}
.sidebar a:hover {
  text-decoration: underline;
  background-color: hsl(from var(--primary-dark-blue) h s 17);
}
.sidebar li {
  border-top: solid hsl(from var(--primary-dark-blue) h 50 33) 1px;
}
.sidebar li:last-of-type {
  border: solid hsl(from var(--primary-dark-blue) h 50 33);
  border-width: 1px 0px; 
}

div.content {
  margin: 50px 30px 0px;
  background-color: white;
  border-radius: 20px;
  width: 100%;
  min-width: 500px;
  height: fit-content;
  min-height: 500px;
  padding-bottom: 60px;
}
div.content > * {
  margin-left: 30px;
  margin-right: 30px;
}

.dashboard h3 {
  margin: 0px;
}
.dashboard .object-counts-container {
  display: flex;
  gap: 10px;  
  flex: 1;

  height: 300px;
}
.dashboard .object-counts-container h3 {
  display: flex;
  gap: 10px;
  margin: 10px 5px;

  text-transform: uppercase;
  font-size: 1.1rem;
  text-align: center;
}
.dashboard .object-counts-container > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  flex: 1;

  height: 210px;
  border: solid lightgray 1px;
  border-radius: 10px;  
}
.dashboard .object-counts-container .count {
  font-weight: 700;
  margin-top: auto;
  font-size: 3rem;
}
.dashboard .object-counts-container div > div:last-of-type {
  margin-bottom: 40px;
  text-align: center;
}
.dashboard .object-counts-container .rfa-count {
  border-bottom: var(--secondary-vermilion) solid 5px;
}
.dashboard .object-counts-container .rfa-count > .count {
  color: var(--secondary-vermilion);
}
.dashboard .object-counts-container .pending-count {
  border-bottom: var(--accent-gold) solid 5px;
}
.dashboard .object-counts-container .pending-count > .count {
  color: var(--accent-gold);
}
.dashboard .object-counts-container .request-count {
  border-bottom: var(--secondary-cicm-blue) solid 5px;
}
.dashboard .object-counts-container .request-count > .count {
  color: var(--secondary-cicm-blue);
}
.dashboard .object-counts-container .documents-count {
  border-bottom: var(--secondary-green) solid 5px;
}
.dashboard .object-counts-container .documents-count > .count {
  color: var(--secondary-green);
}

.charts {
  display: flex;
  flex-wrap: wrap;
  row-gap: 50px;
}
dl {
  display: flex;
  background-color: white;
  flex-direction: column;
  width: 100%;
  max-width: 700px;
  position: relative;
  padding: 0px 20px;
  margin: 0px;
}
dt {
  align-self: flex-start;
  width: 100%;
  font-weight: 700;
  display: block;
  text-align: center;
  font-size: 1.2em;
  font-weight: 700;
  margin-bottom: 20px;
  margin-left: 130px;
}
.text {
  display: flex;
  align-items: center;
  height: 40px;
  width: 210px;
  background-color: white;
  position: absolute;
  left: 0;
  justify-content: flex-end;
}
.percentage {
  font-size: .8em;
  line-height: 1;
  width: 100%;
  height: 40px;
  margin-left: 210px;
  background: repeating-linear-gradient(
  to right,
  #ddd,
  #ddd 1px,
  #fff 1px,
  #fff 5%
  );
}
.bar {
  display: block;
  background-color: var(--secondary-cicm-blue);
  margin-bottom: 10px;
  height: 90%;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  transition: background-color .3s ease;
  cursor: pointer;
}
.bar-chart {
  position: relative;
  width: 600px;
  margin-right: 210px;
}
.bar-chart-labels {
  display: flex;
  margin-left: 210px;
  width: 100%;
}
.bar-chart-labels > div {
  flex: 1;
}
.pie-chart-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 500px;
  height: 400px;
}
.pie-chart-container h3 {
  margin-bottom: auto;
}
.pie-chart-container .pie-chart {
  margin-bottom: auto;
}
.pie-chart-colors {
  display: flex;
  gap: 14px;
  flex-wrap: wrap;
  justify-content: center;
}
.pie-chart-colors li {
  list-style: none;
}
.pie-chart-colors .color {
  width: 10px;
  height: 10px;
  border: solid 1px var(--fg-gray);
  display: inline-block;
}
.pie-chart-colors div.form{
  background-color: var(--secondary-cicm-blue);
}
.pie-chart-colors div.guidelines{
  background-color: var(--secondary-green);
}
.pie-chart-colors div.procedure-manual{
  background-color: var(--accent-gold);
}
.pie-chart-colors div.work-instruction{
  background-color: var(--secondary-vermilion);
}
.pie-chart-colors div.internal-documents{
  background-color: var(--secondary-cyan);
}
.pie-chart-colors div.external-documents{
  background-color: var(--fg-gray);
}

